Possible to request list of companyIds
